Fixed overflow on the search bat at certain window sizes

--- a/app/assets/stylesheets/layout/banner/overlay_pieces/search.css
+++ b/app/assets/stylesheets/layout/banner/overlay_pieces/search.css
@@ -1,6 +1,7 @@
 
 #search {
-  width: 30vw;
+  width: min-content;
+  min-width: 30vw;
 }
 
 #search form {
